--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,15 @@
-.App {
-  text-align: center;
+body {
+  height: 100%;
+  overflow: hidden;
 }
 
+.App {
+  text-align: left;
+  display: flex;
+  flex-wrap: nowrap;
+  flex-direction: row;
+}
+/*
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 40vmin;
@@ -20,7 +28,9 @@
 
 .App-link {
   color: #61dafb;
-}
+} */
+
+
 
 @keyframes App-logo-spin {
   from {
@@ -33,5 +43,74 @@
 
 #map {
   height: 100vh;
-  width: 100%;
+  flex: 75%;
+  float: right;
+  overflow: hidden;
+}
+
+#sidebar {
+  /* width: 325px; */
+  flex: 25%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  overflow-x: hidden;
+}
+
+#sidebar input {
+  /* width: 100%; */
+  margin: 10px;
+  padding: 20px;
+  font-size: 1rem;
+  display: in-inline-block;
+}
+
+#sidebar input:hover {
+  -webkit-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.5);
+  -moz-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.5);
+  box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.5);
+  border-color: transparent;
+}
+
+header {
+  padding: 10px;
+  text-align: center;
+  /* width: 100%; */
+  display: inline-block;
+}
+
+label {
+  /* width: 100%; */
+  margin: 0;
+  display: block;
+  text-align: center;
+}
+
+ul {
+  padding: 20px;
+  /* width: 100%; */
+  height: calc(100vh - 200px);
+  overflow-y: scroll;
+  /* display: inline-block; */
+}
+
+li {
+  list-style: none;
+  padding: 10px;
+  border: thin solid lightgrey;
+  margin: 8px 0;
+  cursor: pointer;
+  /* display: inline-block; */
+  /* width: 100%; */
+}
+
+.venueItem:hover {
+  color: white;
+  background-color: darkgrey;
+  transition: all 0.4s ease;
+}
+
+.venutItem {
+  padding: 5px;
+  margin-bottom: 10px;
 }
